Nett: Add ITomlContainer interface
First steps to separate logical TOML object tree form internal object
hierarchy needed to store various meta information. ITomlContainers are
structures that build up the in memory object hierarchy. These are not
necessarily TOML objects themselves that will get stored in a TOML file.

--- a/Source/Nett/Nett.csproj
+++ b/Source/Nett/Nett.csproj
@@ -97,6 +97,7 @@
     <Compile Include="TomlConfig.Builder.Conversion.cs">
       <DependentUpon>TomlConfig.cs</DependentUpon>
     </Compile>
+    <Compile Include="TomlObjects\ITomlContainer.cs" />
     <Compile Include="TomlObjects\TomlKey.cs" />
     <Compile Include="TomlObjectFactory.Add.cs" />
     <Compile Include="TomlObjectFactory.Create.cs" />
