<WIP>: Parse special char units

--- a/dfx/articles/toc.yml
+++ b/dfx/articles/toc.yml
@@ -6,5 +6,8 @@
   href: typeconv.md
 - name: Configuration
   href: config.md
-- name: TOML spec
-  href: spec.md
+- name: Experimental
+  href: experimental.md
+  items:
+    - name: Units
+      href: units.md
